ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /jenkins(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  name: http
